[package]
name = "qlb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["full"] }
futures = { version = "0.3.0", features = ["thread-pool"]}
once_cell = "1.5.2"
socket2 = { version="^0.4", features = ["all"]}
